@@ -1,3 +1,7 @@
+<b>2011-04-25</b>
+
+* Add /query/X URLs for direct access to airport, airline route maps
+
 <b>2011-02-15</b>
 
 * Allow users to submit corrections to airports they do not own (3178838,3107183)
